[svn r587] (BNK)(WollMuxBar)Icon und Config-File pfadunabhängig über Classloader Icon und Config in Verzeichnis src/data (damit sie ins bin Verzeichnis übernommen werden)